added UISegmentController
